Add new SVG icons and update icon component
- Added new SVG icons: service-2, service, setting-outlined, settings-2, settings, shopping-bag, tesla, user-outlined, user.
- Updated index.d.ts to include new icon types.
- Created a new Icon component to render SVG icons dynamically based on the icon name and size.
- Defined IconProps interface for better type safety in the Icon component.

--- a/src/locales/messages/fr/common.json
+++ b/src/locales/messages/fr/common.json
@@ -1,4 +1,6 @@
 {
   "header": "En-tête",
-  "footer": "Pied de page"
+  "footer": "Pied de page",
+  "french": "Français",
+  "english": "Anglais"
 }
