feat: add dashboard layout with header and sidebar components
- Implemented CreditCardsPage, SettingsPage, and TransactionsPage components.
- Added SVG icon for money loan.
- Created DashboardHeader, DashboardLayout, and DashboardSidebar components for layout structure.
- Developed SidebarItem and SidebarItems components for navigation.
- Integrated localization with locale-routing and defined available locales.
- Added mock data for sidebar items.

--- a/src/locales/messages/en/common.json
+++ b/src/locales/messages/en/common.json
@@ -1,6 +1,13 @@
 {
-  "header": "Header",
-  "footer": "Footer",
   "french": "French",
-  "english": "English"
+  "english": "English",
+  "dashboard": "Dashboard",
+  "transactions": "Transactions",
+  "accounts": "Accounts",
+  "investments": "Investments",
+  "credit_cards": "Credit Cards",
+  "loans": "Loans",
+  "services": "Services",
+  "my_privileges": "My Privileges",
+  "settings": "Settings"
 }
