feat: add search bar component to dashboard header and update translations

--- a/src/locales/messages/en/common.json
+++ b/src/locales/messages/en/common.json
@@ -9,5 +9,6 @@
   "loans": "Loans",
   "services": "Services",
   "my_privileges": "My Privileges",
-  "settings": "Settings"
+  "settings": "Settings",
+  "search_for_something": "Search for something"
 }
