--- a/src/locales/messages/fr/common.json
+++ b/src/locales/messages/fr/common.json
@@ -9,5 +9,6 @@
   "loans": "Prêts",
   "services": "Services",
   "my_privileges": "Mes privilèges",
-  "settings": "Paramètres"
+  "settings": "Paramètres",
+  "search_for_something": "Rechercher quelque chose"
 }
