feat: implement card management components and integrate with dashboard

--- a/src/locales/messages/fr/common.json
+++ b/src/locales/messages/fr/common.json
@@ -10,5 +10,6 @@
   "services": "Services",
   "my_privileges": "Mes privilèges",
   "settings": "Paramètres",
-  "search_for_something": "Rechercher quelque chose"
+  "search_for_something": "Rechercher quelque chose",
+  "my_cards": "Mes cartes"
 }
