--- a/src/locales/messages/en/common.json
+++ b/src/locales/messages/en/common.json
@@ -10,5 +10,6 @@
   "services": "Services",
   "my_privileges": "My Privileges",
   "settings": "Settings",
-  "search_for_something": "Search for something"
+  "search_for_something": "Search for something",
+  "my_cards": "My Cards"
 }
