feat: enhance SectionTitle component with 'see all' link support and update translations

--- a/src/locales/messages/en/common.json
+++ b/src/locales/messages/en/common.json
@@ -14,5 +14,6 @@
   "my_cards": "My Cards",
   "valid_thru": "Valid thru",
   "card_holder": "Card holder",
-  "balance": "Balance"
+  "balance": "Balance",
+  "see_all": " See all"
 }
