--- a/src/locales/messages/fr/common.json
+++ b/src/locales/messages/fr/common.json
@@ -14,5 +14,6 @@
   "my_cards": "Mes cartes",
   "valid_thru": "Validitê",
   "card_holder": "Titulaire",
-  "balance": "Solde"
+  "balance": "Solde",
+  "see_all": "Tout voir"
 }
