feat: add RecentTransactionsList and RecentTransactionItem components; update styles and translations

--- a/src/locales/messages/en/common.json
+++ b/src/locales/messages/en/common.json
@@ -15,5 +15,6 @@
   "valid_thru": "Valid thru",
   "card_holder": "Card holder",
   "balance": "Balance",
-  "see_all": " See all"
+  "see_all": " See all",
+  "recent_transaction": "Recent Transaction"
 }
