--- a/src/locales/messages/fr/common.json
+++ b/src/locales/messages/fr/common.json
@@ -15,5 +15,6 @@
   "valid_thru": "Validitê",
   "card_holder": "Titulaire",
   "balance": "Solde",
-  "see_all": "Tout voir"
+  "see_all": "Tout voir",
+  "recent_transaction": "Transaction récente"
 }
