feat: add WeeklyActivityChart component and integrate it into the Home page; update localization and mock data

--- a/src/locales/messages/en/common.json
+++ b/src/locales/messages/en/common.json
@@ -16,5 +16,8 @@
   "card_holder": "Card holder",
   "balance": "Balance",
   "see_all": " See all",
-  "recent_transaction": "Recent Transaction"
+  "recent_transaction": "Recent Transaction",
+  "deposit": "Deposit",
+  "withdraw": "Withdraw",
+  "weekly_activities": "Weekly activities"
 }
