feat: implement Quick Transfer feature with user list and form; update styles and localization

--- a/src/locales/messages/en/common.json
+++ b/src/locales/messages/en/common.json
@@ -24,5 +24,9 @@
   "entertainment": "Entertainment",
   "bill_expense": "Expense",
   "investment": "Investment",
-  "others": "Others"
+  "others": "Others",
+  "quick_transfer": "Quick Transfer",
+  "write_amount": "Write Amount",
+  "send": "Send",
+  "amount": "Amount"
 }
