--- a/src/locales/messages/fr/common.json
+++ b/src/locales/messages/fr/common.json
@@ -24,5 +24,9 @@
   "entertainment": "Divertissement",
   "bill_expense": "Factures",
   "investment": "Investissement",
-  "others": "Autres"
+  "others": "Autres",
+  "quick_transfer": "Transfert rapide",
+  "write_amount": "Ecrire le montant",
+  "send": "Envoyer",
+  "amount": "Montant"
 }
