feat: add BalanceHistoryChart component and integrate it into the Home page; update localization and styles

--- a/src/locales/messages/en/common.json
+++ b/src/locales/messages/en/common.json
@@ -28,5 +28,6 @@
   "quick_transfer": "Quick Transfer",
   "write_amount": "Write Amount",
   "send": "Send",
-  "amount": "Amount"
+  "amount": "Amount",
+  "balance_history": "Balance History"
 }
