feat: implement ExpenseBarChart component and integrate it into TransactionsPage; update styles and localization

--- a/src/locales/messages/en/common.json
+++ b/src/locales/messages/en/common.json
@@ -29,5 +29,6 @@
   "write_amount": "Write Amount",
   "send": "Send",
   "amount": "Amount",
-  "balance_history": "Balance History"
+  "balance_history": "Balance History",
+  "my_expense": "My expense"
 }
