--- a/src/locales/messages/fr/common.json
+++ b/src/locales/messages/fr/common.json
@@ -29,5 +29,6 @@
   "write_amount": "Ecrire le montant",
   "send": "Envoyer",
   "amount": "Montant",
-  "balance_history": "Historique du solde"
+  "balance_history": "Historique du solde",
+  "my_expense": "Mes dépenses"
 }
