feat(transactions): implement transactions page with filtering and pagination
- Added TransactionsPage component to display filtered transactions based on type.
- Integrated TransactionsList component to show paginated transaction data.
- Introduced TransactionsFilter for filtering transactions by type (all, income, expense).
- Created GlobalPagination component for handling pagination across transaction lists.
- Updated transaction data structure and mock data to include necessary fields.
- Enhanced UI components for better presentation of transaction data.
- Added localization support for new transaction-related strings in English and French.
- Refactored existing components to accommodate new transaction features and improve code organization.

--- a/src/locales/messages/en/common.json
+++ b/src/locales/messages/en/common.json
@@ -30,5 +30,21 @@
   "send": "Send",
   "amount": "Amount",
   "balance_history": "Balance History",
-  "my_expense": "My expense"
+  "my_expense": "My expense",
+  "recent_transactions": "Recent Transactions",
+  "all_transactions": "All transactions",
+  "income": "Income",
+  "expense": "Expense",
+  "description": "Description",
+  "transaction_id": "Transaction ID",
+  "type": "Type",
+  "card": "Card",
+  "date": "Date",
+  "receipt": "Receipt",
+  "download": "Download",
+  "previous": "Previous",
+  "next": "Next",
+  "shipping": "Shipping",
+  "transfer": "Transfer",
+  "service": "Service"
 }
