feat(accounts): implement AccountStatList component and integrate it into AccountsPage; add ACCOUNT_STATS mock data and update styles

--- a/src/locales/messages/en/common.json
+++ b/src/locales/messages/en/common.json
@@ -46,5 +46,7 @@
   "next": "Next",
   "shipping": "Shipping",
   "transfer": "Transfer",
-  "service": "Service"
+  "service": "Service",
+  "my_balance": "My balance",
+  "total_saving": "Total Saving"
 }
