--- a/src/locales/messages/fr/common.json
+++ b/src/locales/messages/fr/common.json
@@ -46,5 +46,7 @@
   "next": "Suivant",
   "shipping": "Expédition",
   "transfer": "Transfert",
-  "service": "Service"
+  "service": "Service",
+  "my_balance": "My balance",
+  "total_saving": "Total Saving"
 }
