feat(transactions): refactor transaction components; add AccountLatestTransactionItem and TransactionAmount; update imports and localization

--- a/src/locales/messages/en/common.json
+++ b/src/locales/messages/en/common.json
@@ -48,5 +48,7 @@
   "transfer": "Transfer",
   "service": "Service",
   "my_balance": "My balance",
-  "total_saving": "Total Saving"
+  "total_saving": "Total Saving",
+  "pending": "Pending",
+  "completed": "Completed"
 }
