--- a/src/locales/messages/fr/common.json
+++ b/src/locales/messages/fr/common.json
@@ -48,5 +48,7 @@
   "transfer": "Transfert",
   "service": "Service",
   "my_balance": "My balance",
-  "total_saving": "Total Saving"
+  "total_saving": "Total Saving",
+  "pending": "En attente",
+  "completed": "Terminé"
 }
