feat(accounts): add AccountLatestTransactions component and integrate it into AccountsPage; update styles and localization

--- a/src/locales/messages/fr/common.json
+++ b/src/locales/messages/fr/common.json
@@ -50,5 +50,7 @@
   "my_balance": "My balance",
   "total_saving": "Total Saving",
   "pending": "En attente",
-  "completed": "Terminé"
+  "completed": "Terminé",
+  "last_transaction": "Dernière transaction",
+  "my_card": "Ma carte"
 }
