--- a/src/locales/messages/en/common.json
+++ b/src/locales/messages/en/common.json
@@ -50,5 +50,7 @@
   "my_balance": "My balance",
   "total_saving": "Total Saving",
   "pending": "Pending",
-  "completed": "Completed"
+  "completed": "Completed",
+  "last_transaction": "Last transaction",
+  "my_card": "My card"
 }
