--- a/src/locales/messages/fr/common.json
+++ b/src/locales/messages/fr/common.json
@@ -52,5 +52,9 @@
   "pending": "En attente",
   "completed": "Terminé",
   "last_transaction": "Dernière transaction",
-  "my_card": "Ma carte"
+  "my_card": "Ma carte",
+  "debit_credit_overview": "Aperçu des débits et crédits",
+  "debit_credit_overview_detail": "<0>{{debited_amount}}</0> débités et <0>{ {credited_amount}}</0> crédités cette semaine",
+  "debit": "Débit",
+  "credit": "Crédit"
 }
