feat(invoices): add InvoicesSendList and InvoiceSentItem components; update AccountsPage layout and localization

--- a/src/locales/messages/en/common.json
+++ b/src/locales/messages/en/common.json
@@ -56,5 +56,6 @@
   "debit_credit_overview": "Debit & Credit Overview",
   "debit_credit_overview_detail": "<0>{{debited_amount}}</0> Debited & <1>{{credited_amount}}</1> Credited in this Week",
   "debit": "Debit",
-  "credit": "Credit"
+  "credit": "Credit",
+  "invoices_sent": "Invoices Sent"
 }
