feat: add investment statistics component and related icons
- Implemented InvestmentStatList component to display investment statistics.
- Added new SVG icons: pie-chart and repeat.
- Updated icon type definitions to include new icons.
- Enhanced InvestmentsPage to utilize InvestmentStatList.
- Updated translations for investment-related terms in English and French.
- Minor adjustments to styles in StatCard component for better responsiveness.

--- a/src/locales/messages/en/common.json
+++ b/src/locales/messages/en/common.json
@@ -57,5 +57,8 @@
   "debit_credit_overview_detail": "<0>{{debited_amount}}</0> Debited & <1>{{credited_amount}}</1> Credited in this Week",
   "debit": "Debit",
   "credit": "Credit",
-  "invoices_sent": "Invoices Sent"
+  "invoices_sent": "Invoices Sent",
+  "total_invested": "Total Invested amount",
+  "number_of_investment": "Number of investment",
+  "rate_of_return": "Rate of return"
 }
