feat(credit-cards): add CardExpenseStat component and update layout; modify localization for card expense statistics

--- a/src/locales/messages/en/common.json
+++ b/src/locales/messages/en/common.json
@@ -69,5 +69,6 @@
   "return_value": "Return Value",
   "price": "Price",
   "return": "Return",
-  "name": "Name"
+  "name": "Name",
+  "card_expense_stat": "Card Expense Statistics"
 }
