feat(credit-cards): implement CreditCardList and CreditCardItem components; update layout and localization for credit card features

--- a/src/locales/messages/en/common.json
+++ b/src/locales/messages/en/common.json
@@ -70,5 +70,26 @@
   "price": "Price",
   "return": "Return",
   "name": "Name",
-  "card_expense_stat": "Card Expense Statistics"
+  "card_expense_stat": "Card Expense Statistics",
+  "card_type": "Card type",
+  "primary": "Primary",
+  "secondary": "Secondary",
+  "third": "Third",
+  "bank": "Bank",
+  "view_details": "View details",
+  "card_list": "Card list",
+  "add_new_card": "Add new card",
+  "card_setting": "Card setting",
+  "name_on_card": "Name on card",
+  "card_number": "Card number",
+  "expiration_date": "Expiration date",
+  "add_card": "Add card",
+  "create_new_card_message": "Credit Card generally means a plastic card issued by Scheduled Commercial Banks assigned to a Cardholder, with a credit limit, that can be used to purchase goods and services on credit or obtain cash advances.",
+  "block_card": "Block card",
+  "instantly_block_card": "Instantly block your card",
+  "chang_pic_code": "Change pic code",
+  "withdraw_without_any_card": "Withdraw without any card",
+  "add_to_google_pay": "Add to Google pay",
+  "add_to_apple_pay": "Add to Apple pay",
+  "add_to_apple_store": "Add to Apple store"
 }
