--- a/src/locales/messages/fr/common.json
+++ b/src/locales/messages/fr/common.json
@@ -70,5 +70,26 @@
   "price": "Prix",
   "return": "Rendement",
   "name": "Nom",
-  "card_expense_stat": "Dépenses par carte"
+  "card_expense_stat": "Dépenses par carte",
+  "card_type": "Type de carte",
+  "primary": "Primaire",
+  "secondary": "Secondaire",
+  "third": "Tertiaire",
+  "bank": "Banque",
+  "view_details": "Voir les détails",
+  "card_list": "Liste des cartes",
+  "add_new_card": "Ajouter une nouvelle carte",
+  "card_setting": "Paramètres de la carte",
+  "name_on_card": "Nom sur la carte",
+  "card_number": "Numéro de carte",
+  "expiration_date": "Date d'expiration",
+  "add_card": "Ajouter une carte",
+  "create_new_card_message": "Une carte de crédit est généralement une carte en plastique émise par les banques commerciales agréées, attribuée à un titulaire, avec une limite de crédit, qui peut être utilisée pour acheter des biens et services à crédit ou obtenir des avances de fonds.",
+  "block_card": "Bloquer la carte",
+  "instantly_block_card": "Bloquer instantanément votre carte",
+  "chang_pic_code": "Changer le code PIN",
+  "withdraw_without_any_card": "Retirer sans carte",
+  "add_to_google_pay": "Ajouter à Google Pay",
+  "add_to_apple_pay": "Ajouter à Apple Pay",
+  "add_to_apple_store": "Ajouter à l'App Store"
 }
