feat(services): implement bank services feature with components for service items and statistics; update localization and layout

--- a/src/locales/messages/en/common.json
+++ b/src/locales/messages/en/common.json
@@ -105,5 +105,15 @@
   "repay": "Repay",
   "month": "Month",
   "months": "Months",
-  "total": "Total"
+  "total": "Total",
+  "life_insurance": "Life Insurance",
+  "unlimited_protection": "Unlimited protection",
+  "shopping": "Shopping",
+  "safety": "Safety",
+  "we_are_your_allies": "We are your allies",
+  "buy_think_grow": "Buy.Think.Grow",
+  "bank_services_list": "Bank services list",
+  "checking_account": "Checking account",
+  "saving_account": "Saving account",
+  "debit_and_credit_card": "Debit and credit card"
 }
