--- a/src/locales/messages/fr/common.json
+++ b/src/locales/messages/fr/common.json
@@ -105,5 +105,15 @@
   "repay": "Rembourser",
   "month": "Mois",
   "months": "Mois",
-  "total": "Total"
+  "total": "Total",
+  "life_insurance": "Assurance vie",
+  "unlimited_protection": "Protection illimitée",
+  "shopping": "Shopping",
+  "safety": "Sécurité",
+  "we_are_your_allies": "Nous sommes vos alliés",
+  "buy_think_grow": "Achetez.Pensez.Grandissez",
+  "bank_services_list": "Liste des services bancaires",
+  "checking_account": "Compte courant",
+  "saving_account": "Compte épargne",
+  "debit_and_credit_card": "Carte de débit et de crédit"
 }
