feat: add account settings and preferences forms
- Introduced new `AccountSettings` component to manage user account settings.
- Added `AccountPreferenceForm`, `AccountSecurityForm`, and `EditProfileForm` for user preferences and security settings.
- Implemented `AccountingSettingFilter` for navigating between different settings.
- Updated translations in English and French for new settings fields.
- Added new icon `pencel-alt` to the SVG icons.
- Adjusted padding and layout in various dashboard pages for better responsiveness.
- Refactored `DashboardHeader` for improved layout and search functionality.
- Updated sidebar items to reflect new settings structure.

--- a/src/locales/messages/en/common.json
+++ b/src/locales/messages/en/common.json
@@ -115,5 +115,30 @@
   "bank_services_list": "Bank services list",
   "checking_account": "Checking account",
   "saving_account": "Saving account",
-  "debit_and_credit_card": "Debit and credit card"
+  "debit_and_credit_card": "Debit and credit card",
+  "edit_profile": "Edit profile",
+  "preference": "Preference",
+  "security": "Security",
+  "your_name": "Your name",
+  "user_name": "User name",
+  "email": "Email",
+  "password": "Password",
+  "date_of_birth": "Date of birth",
+  "present_address": "Present address",
+  "permanent_address": "Permanent address",
+  "city": "city",
+  "postal_code": "Postal code",
+  "country": "Country",
+  "save": "Save",
+  "currency": "Currency",
+  "time_zone": "Time zone",
+  "notification": "Notification",
+  "send_receive_currency": "I send or receive digita currency",
+  "receive_merchant_order": "I receive merchant order",
+  "account_recommendation": "There are recommendation for my account",
+  "two_factor_auth": "Two-factor Authentication",
+  "enable_or_disable_two_factor_auth": "Enable or disable two factor authentication",
+  "change_password": "Change password",
+  "current_password": "Current password",
+  "new_password": "Current password"
 }
