--- a/src/locales/messages/fr/common.json
+++ b/src/locales/messages/fr/common.json
@@ -115,5 +115,30 @@
   "bank_services_list": "Liste des services bancaires",
   "checking_account": "Compte courant",
   "saving_account": "Compte épargne",
-  "debit_and_credit_card": "Carte de débit et de crédit"
+  "debit_and_credit_card": "Carte de débit et de crédit",
+  "edit_profile": "Modifier le profil",
+  "preference": "Préférence",
+  "security": "Sécurité",
+  "your_name": "Votre nom",
+  "user_name": "Nom d'utilisateur",
+  "email": "Email",
+  "password": "Mot de passe",
+  "date_of_birth": "Date de naissance",
+  "present_address": "Adresse actuelle",
+  "permanent_address": "Adresse permanente",
+  "city": "Ville",
+  "postal_code": "Code postal",
+  "country": "Pays",
+  "save": "Enregistrer",
+  "currency": "Devise",
+  "time_zone": "Fuseau horaire",
+  "notification": "Notification",
+  "send_receive_currency": "J'envoie ou reçois de la monnaie numérique",
+  "receive_merchant_order": "Je reçois une commande marchande",
+  "account_recommendation": "Il y a des recommandations pour mon compte",
+  "two_factor_auth": "Authentification à deux facteurs",
+  "enable_or_disable_two_factor_auth": "Activer ou désactiver l'authentification à deux facteurs",
+  "change_password": "Changer le mot de passe",
+  "current_password": "Mot de passe actuel",
+  "new_password": "Nouveau mot de passe"
 }
